Update footer copyright information and add dynamic year display

--- a/index.html
+++ b/index.html
@@ -629,7 +629,8 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          Copyright 2024 by adnan-bhaldar.
+          &copy; <span id="current-year"></span> <a href="https://github.com/adnan-bhaldar" target="_blank">Adnan Bhaldar.</a> All
+          Rights Reserved
         </p>
 
         <ul class="social-list">
